// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component should render with style 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "blue",
        "container": Object {
          "backgroundColor": "#e1e8ee",
          "height": 1,
        },
      },
    ]
  }
/>
`;

exports[`Divider Component should render without issues 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "container": Object {
          "backgroundColor": "#e1e8ee",
          "height": 1,
        },
      },
    ]
  }
/>
`;
